deleted a bunch of unused stuff from the main glue build.